tests/snapshots/tui__snapshot_apply_confirmation.snap
---
source: tests/tui.rs
assertion_line: 458
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 4 on · 0 off                                                        ● 2 pending · a apply "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 4 DP-1-3 ────────────────────┐"
"│                                                                  ││ LG HDR 4K                    │"
"│                                                                  ││ serial 104NTAB9N123          │"
"│                                                                  ││ mode  3840x2160@60.00        │"
"│                                                                  ││ pos   4480,0                 │"
"│                                                                  ││ rot   normal                 │"
"│                                                                  ││ link  right-of 2 DP-1-2, top │"
"│ ┌ Apply ───────────────────────────────────────────────────────────────────────────────────────┐ │"
"│ │ Changes                                                                                      │ │"
"│ │   eDP-1  pos 2240,1440 → 2250,1440                                                           │ │"
"│ │   DP-1-3  off → 3840x2160@60.00                                                              │ │"
"│ │                                                                                              │ │"
"│ │ Command                                                                                      │ │"
"│ │ xrandr --output HDMI-1-0 --mode 0x1c3 --pos 0x360 --rotate normal --reflect normal --output  │ │"
"│ │ DP-1-2 --primary --mode 0x1cb --pos 1920x0 --rotate normal --reflect normal --output eDP-1   │ │"
"│ │ --mode 0x1cf --pos 2250x1440 --rotate normal --reflect normal --output DP-1-3 --mode 0x1d6   │ │"
"│ │ --pos 4480x0 --rotate normal --reflect normal                                                │ │"
"│ │                                                                                              │ │"
"│ │ ⏎ apply · Esc cancel                                                                         │ │"
"│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" ⏎ apply · Esc cancel                                                                               "
