tests/snapshots/tui__snapshot_apply_failed.snap
---
source: tests/tui.rs
assertion_line: 483
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 2 DP-1-2 ★ ──────────────────┐"
"│                                                                  ││ DELL U2719D                  │"
"│                                                                  ││ serial 7K5VQ93               │"
"│                                                                  ││ mode  2560x1440@143.91       │"
"│                            ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓ ││ pos   1920,0                 │"
"│                            ┃                                   ┃ ││ rot   normal                 │"
"│                            ┃                                   ┃ ││ link  anchor                 │"
"│ ┌──────────────────────────┨                                   ┃ ││ size  597x336 mm · 109 dpi   │"
"│ │                          ┃            2 DP-1-2 ★             ┃ ││                              │"
"│ ┌ Apply failed ────────────────────────────────────────────────────────────────────────────────┐ │"
"│ │ xrandr: warning: output DP-1-3 not found; ignoring                                           │ │"
"│ │ The layout did not come out as asked:                                                        │ │"
"│ │   DP-1-3 is off; it should be on.                                                            │ │"
"│ │ Reverted to the previous layout.                                                             │ │"
"│ │                                                                                              │ │"
"│ │ ⏎ close                                                                                      │ │"
"│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │"
"│                                 │         3 eDP-1          │     ││                              │"
"│                                 │     AUO B156HAN12.H      │     ││                              │"
"│                                 │     1920x1080@165.01     │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 └──────────────────────────┘     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" ⏎ close                                                                                            "
