tests/snapshots/tui__snapshot_demo_overview.snap
---
source: tests/tui.rs
assertion_line: 398
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 2 DP-1-2 ★ ──────────────────┐"
"│                                                                  ││ DELL U2719D                  │"
"│                                                                  ││ serial 7K5VQ93               │"
"│                                                                  ││ mode  2560x1440@143.91       │"
"│                            ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓ ││ pos   1920,0                 │"
"│                            ┃                                   ┃ ││ rot   normal                 │"
"│                            ┃                                   ┃ ││ link  anchor                 │"
"│ ┌──────────────────────────┨                                   ┃ ││ size  597x336 mm · 109 dpi   │"
"│ │                          ┃            2 DP-1-2 ★             ┃ ││                              │"
"│ │        1 HDMI-1-0        ┃            DELL U2719D            ┃ ││                              │"
"│ │       Philips FTV        ┃         2560x1440@143.91          ┃ ││                              │"
"│ │     1920x1080@59.94      ▸                                   ┃ ││                              │"
"│ │                          ┃                                   ┃ ││                              │"
"│ │                          ┃                                   ┃ ││                              │"
"│ └──────────────────────────┺━━━━┯━━━━━━━━━━━━━▴━━━━━━━━━━━━┯━━━┛ ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │         3 eDP-1          │     ││                              │"
"│                                 │     AUO B156HAN12.H      │     ││                              │"
"│                                 │     1920x1080@165.01     │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 └──────────────────────────┘     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" hjkl focus · HJKL move · s stick · m mode · r rate · o rotate · ␣ on/off · ? help                  "
