tests/snapshots/tui__snapshot_help.snap
---
source: tests/tui.rs
assertion_line: 691
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ lay┌ help ──────────────────────────────────────────────────────────────────────────────────┐────┐"
"│    │Layout                                                                                  │    │"
"│    │  h j k l / arrows          Focus the nearest display in that direction                 │    │"
"│    │  H J K L / Shift-arrows    Snap-move: swap with a neighbour or slide to the next stop  │    │"
"│    │  Alt-h j k l / Alt-arrows  Nudge freely by the step; holding the key speeds it up      │    │"
"│    │  s                         Stick to a side of another display                          │    │"
"│    │  S                         Unstick: stay in place, follow nothing                      │    │"
"│ ┌──│  m                         Pick a resolution                                           │i   │"
"│ │  │  [                         Next smaller resolution                                     │    │"
"│ │  │  ]                         Next larger resolution                                      │    │"
"│ │  │  r                         Pick a refresh rate                                         │    │"
"│ │  │  {                         Next lower refresh rate                                     │    │"
"│ │  │  }                         Next higher refresh rate                                    │    │"
"│ │  │  o                         Rotate clockwise                                            │    │"
"│ └──│  O                         Rotate counter-clockwise                                    │    │"
"│    │  p                         Make primary                                                │    │"
"│    │  Space                     Turn the display on or off                                  │    │"
"│    │  u                         Undo                                                        │    │"
"│    │  Ctrl-r                    Redo                                                        │    │"
"│    │  a                         Apply, with an automatic revert unless you keep it          │    │"
"│    │  y                         Copy the pending xrandr command to the clipboard (OSC 52)   │    │"
"│    │  Tab                       Focus the next display                                      │    │"
"│    │  Shift-Tab                 Focus the previous display                                  │    │"
"│    │  1-9                       Focus display N, on or off                                  │    │"
"│    │  :                         Command line                                                │────┤"
"│    │  R                         Reload the live state                                       │    │"
"└────│jk scroll · Esc close                                                                   │────┘"
"     └────────────────────────────────────────────────────────────────────────────────────────┘10px "
" jk scroll · Esc close                                                                              "
