tests/snapshots/tui__snapshot_mode_picker.snap
---
source: tests/tui.rs
assertion_line: 412
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 2 DP-1-2 ★ ──────────────────┐"
"│                                                                  ││ DELL U2719D                  │"
"│                                                                  ││ serial 7K5VQ93               │"
"│                                                                  ││ mode  2560x1440@143.91       │"
"│                            ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓ ││ pos   1920,0                 │"
"│                            ┃                                   ┃ ││ rot   normal                 │"
"│                            ┃                                   ┃ ││ link  anchor                 │"
"│ ┌──────────────────────────┨                                   ┃ ││ size  597x336 mm · 109 dpi   │"
"│ │                          ┃            2 DP-1-2 ★             ┃ ││                              │"
"│ │        1 HDMI-1-0        ┃ ┌ 2 DP-1-2 resolution ──────────────┐│                              │"
"│ │       Philips FTV        ┃ │ •+ 2560x1440  up to 143.91 Hz     ││                              │"
"│ │     1920x1080@59.94      ▸ │    1920x1080  up to 119.88 Hz     ││                              │"
"│ │                          ┃ │     1280x720  up to 60.00 Hz      ││                              │"
"│ │                          ┃ │     1024x768  up to 60.00 Hz      ││                              │"
"│ └──────────────────────────┺━│      800x600  up to 60.32 Hz      ││                              │"
"│                              │      640x480  up to 59.94 Hz      ││                              │"
"│                              │jk select · ⏎ choose · Esc cancel  ││                              │"
"│                              └───────────────────────────────────┘│                              │"
"│                                 │     AUO B156HAN12.H      │     ││                              │"
"│                                 │     1920x1080@165.01     │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 └──────────────────────────┘     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" jk select · ⏎ choose · Esc cancel                                                                  "
