tests/snapshots/tui__snapshot_overlap.snap
---
source: tests/tui.rs
assertion_line: 425
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                  ● 1 pending "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 3 eDP-1 ─────────────────────┐"
"│                                                                  ││ AUO B156HAN12.H              │"
"│                                                                  ││ mode  1920x1080@165.01       │"
"│                                                                  ││ pos   2240,1440 → 2240,940   │"
"│                                                                  ││ rot   normal                 │"
"│                                                                  ││ link  anchor                 │"
"│                            ┌───────────────────────────────────┐ ││ size  344x193 mm · 142 dpi   │"
"│                            │                                   │ ││                              │"
"│ ┌──────────────────────────┤                                   │ ││                              │"
"│ │                          │                                   │ ││                              │"
"│ │                          │            2 DP-1-2 ★             │ ││                              │"
"│ │        1 HDMI-1-0        │            DELL U2719D            │ ││                              │"
"│ │       Philips FTV        ▸         2560x1440@143.91          │ ││                              │"
"│ │     1920x1080@59.94      │    ┏━━━━━━━━━━━━━━━━━━━━━━━━━━┓   │ ││                              │"
"│ │                          │    ┃░░░░░░░░░░░░░░░░░░░░░░░░░░┃   │ ││                              │"
"│ │                          │    ┃░░░░░░░░3 eDP-1 ●░░░░░░░░░┃   │ ││                              │"
"│ └──────────────────────────┴────╂─────AUO B156HAN12.H──────╂───┘ ││                              │"
"│                                 ┃     1920x1080@165.01     ┃     ││                              │"
"│                                 ┃                          ┃     ││                              │"
"│                                 ┃                          ┃     ││                              │"
"│                                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛     ││                              │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
" DP-1-2 and eDP-1 overlap.                                                                step 10px "
" hjkl focus · HJKL move · s stick · m mode · r rate · o rotate · ␣ on/off · u undo · ? help         "
