tests/snapshots/tui__snapshot_overwrite.snap
---
source: tests/tui.rs
assertion_line: 771
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 2 DP-1-2 ★ ──────────────────┐"
"│                                                                  ││ DELL U2719D                  │"
"│                                                                  ││ serial 7K5VQ93               │"
"│                                                                  ││ mode  2560x1440@143.91       │"
"│                            ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓ ││ pos   1920,0                 │"
"│                            ┃                                   ┃ ││ rot   normal                 │"
"│                            ┃                                   ┃ ││ link  anchor                 │"
"│ ┌──────────────────────────┨                                   ┃ ││ size  597x336 mm · 109 dpi   │"
"│ ┌ save ────────────────────────────────────────────────────────────────────────────────────────┐ │"
"│ │ /layouts/desk.sh exists and differs:                                                         │ │"
"│ │                                                                                              │ │"
"│ │ - xrandr --output HDMI-1-0 --off \                                                           │ │"
"│ │ + # generated by outlay 0.1.0                                                                │ │"
"│ │ + xrandr --output HDMI-1-0 --auto \                                                          │ │"
"│ │                                                                                              │ │"
"│ │ Overwrite it? Other lines stay as they are.                                                  │ │"
"│ │                                                                                              │ │"
"│ │ ⏎ yes · Esc no                                                                               │ │"
"│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │"
"│                                 │     1920x1080@165.01     │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 └──────────────────────────┘     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" ⏎ yes · Esc no                                                                                     "
