tests/snapshots/tui__snapshot_plugged_in.snap
---
source: tests/tui.rs
assertion_line: 932
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                        ● 1 pending · a apply "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 4 DP-1-3 ────────────────────┐"
"│                                                                  ││ LG HDR 4K                    │"
"│                                                                  ││ serial 104NTAB9N123          │"
"│                                                                  ││ off                          │"
"│                            ┌───────────────────────────────────┐ ││ Space turns it on            │"
"│                            │                                   │ ││ size  600x340 mm             │"
"│                            │                                   │ ││                              │"
"│ ┌──────────────────────────┤                                   │ ││                              │"
"│ │                          │            2 DP-1-2 ★             │ ││                              │"
"│ │        1 HDMI-1-0        │            DELL U2719D            │ ││                              │"
"│ │       Philips FTV        │         2560x1440@143.91          │ ││                              │"
"│ │     1920x1080@59.94      ▸                                   │ ││                              │"
"│ │                          │                                   │ ││                              │"
"│ │                          │                                   │ ││                              │"
"│ └──────────────────────────┴────┬─────────────▴────────────┬───┘ ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │        3 eDP-1 ●         │     ││                              │"
"│                                 │     AUO B156HAN12.H      │     ││                              │"
"│                                 │     1920x1080@165.01     │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 └──────────────────────────┘     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
" DP-1-3 connected: Space turns it on.                                                     step 10px "
" hjkl focus · HJKL move · s stick · m mode · r rate · o rotate · ␣ on/off · u undo · ? help         "
