tests/snapshots/tui__snapshot_profile_picker.snap
---
source: tests/tui.rs
assertion_line: 749
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 2 DP-1-2 ★ ──────────────────┐"
"│                                                                  ││ DELL U2719D                  │"
"│                                                                  ││ serial 7K5VQ93               │"
"│          ┌ profiles · 3 ─────────────────────────────────────────────────────────────┐3.91       │"
"│          │ ~home-setup             │          ┌────────────────────────────┐         │           │"
"│          │  monitors-only-dynamic  │          │                            │         │           │"
"│          │  tv-home                │          │                            │         │           │"
"│ ┌────────│                         │          │         1 HDMI-1-0         │         │ 109 dpi   │"
"│ │        │                         │          │        Philips FTV         │         │           │"
"│ │        │                         │          │      2560x1440@59.95       │         │           │"
"│ │       P│                         │          │                            │         │           │"
"│ │     192│                         │          │                            │         │           │"
"│ │        │                         │          ├──────────▾──────────┬──────┘         │           │"
"│ │        │                         │          │                     │                │           │"
"│ └────────│                         │          │      3 eDP-1 ★      │                │           │"
"│          │                         │          │   AUO B156HAN12.H   │                │           │"
"│          │                         │          │  1920x1080@165.01   │                │           │"
"│          │                         │          │                     │                │           │"
"│          │                         │          └─────────────────────┘                │           │"
"│          │                         │ 3 outputs change                                │           │"
"│          │                                                                           │           │"
"│          │jk select · ⏎ open · Esc cancel                                            │           │"
"│          └───────────────────────────────────────────────────────────────────────────┘           │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" jk select · ⏎ open · Esc cancel                                                                    "
