tests/snapshots/tui__snapshot_remap.snap
---
source: tests/tui.rs
assertion_line: 758
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 2 DP-1-2 ★ ──────────────────┐"
"│                                                                  ││ DELL U2719D                  │"
"│                                                                  ││ serial 7K5VQ93               │"
"│                                                                  ││ mode  2560x1440@143.91       │"
"│                            ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓ ││ pos   1920,0                 │"
"│                            ┃                                   ┃ ││ rot   normal                 │"
"│                            ┃                                   ┃ ││ link  anchor                 │"
"│ ┌──────────────────────────┨                                   ┃ ││ size  597x336 mm · 109 dpi   │"
"│ │                          ┃            2 DP-1-2 ★             ┃ ││                              │"
"│ ┌ open mirror-work-setup ──────────────────────────────────────────────────────────────────────┐ │"
"│ │ mirror-work-setup names outputs that are not connected. Choose where each one goes:          │ │"
"│ │                                                                                              │ │"
"│ │   DVI-I-3-2  →  ‹ 2 DP-1-2 DELL U2719D ›                                                     │ │"
"│ │   DVI-I-2-1  →  ‹ skip ›                                                                     │ │"
"│ │                                                                                              │ │"
"│ │ hjkl choose · ⏎ open · Esc cancel                                                            │ │"
"│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │"
"│                                 │         3 eDP-1          │     ││                              │"
"│                                 │     AUO B156HAN12.H      │     ││                              │"
"│                                 │     1920x1080@165.01     │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 │                          │     ││                              │"
"│                                 └──────────────────────────┘     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" hjkl choose · ⏎ open · Esc cancel                                                                  "
