tests/snapshots/tui__snapshot_scale_picker.snap
---
source: tests/tui.rs
assertion_line: 985
expression: "screen(&mut app, 100, 30).backend()"
---
" outlay · 3 on · 1 off                                                                   no changes "
"┌ layout ──────────────────────────────────────────────────────────┐┌ 3 eDP-1 ─────────────────────┐"
"│                                                                  ││ AUO B156HAN12.H              │"
"│                                                                  ││ mode  1920x1080@165.01       │"
"│                                                                  ││ pos   2240,1440              │"
"│                            ┌───────────────────────────────────┐ ││ rot   normal                 │"
"│                            │                                   │ ││ link  below 2 DP-1-2, centre │"
"│                            │                                   │ ││ size  344x193 mm · 142 dpi   │"
"│ ┌──────────────────────────┤ ┌ 3 eDP-1 scale ────────────────────┐│                              │"
"│ │                          │ │    ×0.5 → 960x540 desktop         ││                              │"
"│ │        1 HDMI-1-0        │ │   ×0.75 → 1440x810 desktop        ││                              │"
"│ │       Philips FTV        │ │ •    ×1 → 1920x1080 desktop       ││                              │"
"│ │     1920x1080@59.94      ▸ │   ×1.25 → 2400x1350 desktop       ││                              │"
"│ │                          │ │    ×1.5 → 2880x1620 desktop       ││                              │"
"│ │                          │ │   ×1.75 → 3360x1890 desktop       ││                              │"
"│ └──────────────────────────┴─│      ×2 → 3840x2160 desktop       ││                              │"
"│                              │    ×2.5 → 4800x2700 desktop       ││                              │"
"│                              │      ×3 → 5760x3240 desktop       ││                              │"
"│                              │jk select · ⏎ choose · Esc cancel  ││                              │"
"│                              └───────────────────────────────────┘│                              │"
"│                                 ┃     1920x1080@165.01     ┃     ││                              │"
"│                                 ┃                          ┃     ││                              │"
"│                                 ┃                          ┃     ││                              │"
"│                                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━┛     ││                              │"
"│                                                                  ││                              │"
"│                                                                  │├ off ─────────────────────────┤"
"│                                                                  ││ 4 DP-1-3    LG HDR 4K        │"
"└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘"
"                                                                                          step 10px "
" jk select · ⏎ choose · Esc cancel                                                                  "
